--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,8 +24,12 @@ a {
 }
 a:hover {
   color: #fc7d3d;
-  text-decoration: underline;
 }
 .active {
   color: #fc7d3d;
+}
+input, textarea {
+  padding: 4px 4px;
+  outline: none;
+  border: 1px solid #dcdfe6;
 }
